# mezzanine

./: .gitignore  AGENTS.md  COPYING  Cargo.toml  Justfile  README.md  SPEC.md  justfile
crates/mez-agent/: Cargo.toml
crates/mez-agent/src/: accounting.rs  action_gates.rs  action_planning.rs  action_recovery.rs  action_result.rs  action_result_context.rs  agent_shell.rs  agent_shell_session.rs  anthropic.rs  auth.rs  auto_sizing.rs  claude_code.rs  config_change.rs  context.rs  context_appenders.rs  context_assembly.rs  context_compaction.rs  context_continuity.rs  context_skills.rs  continuation.rs  deepseek.rs  deepseek_response.rs  execution.rs  execution_transcript.rs  failure_summary.rs  harness.rs  http.rs  instructions.rs  lib.rs  local_action.rs  maap.rs  maap_protocol_tests.rs  macro_workflow.rs  mcp.rs  memory.rs  memory_guardrail.rs  model_catalog.rs  model_response.rs  network_action.rs  openai_cache.rs  (+35 more)
crates/mez-agent/src/action_result_context/: tests.rs
crates/mez-agent/src/context_appenders/tests/: guidance.rs  integrations.rs  mod.rs
crates/mez-agent/src/context_assembly/tests/: policy.rs
crates/mez-agent/src/instructions/: error.rs  mod.rs  planning.rs  tests.rs  types.rs
crates/mez-agent/src/issues/: error.rs  mod.rs  presentation.rs  types.rs  validation.rs
crates/mez-agent/src/issues/tests/: mod.rs  records.rs  validation.rs
crates/mez-agent/src/mcp/: error.rs  mod.rs  prompt.rs  protocol.rs  registry.rs  types.rs
crates/mez-agent/src/mcp/tests/: mod.rs  protocol.rs  registry.rs
crates/mez-agent/src/memory/: action_results.rs  context.rs  encoding.rs  error.rs  mod.rs  retrieval.rs  types.rs  validation.rs
crates/mez-agent/src/memory/tests/: codec.rs  mod.rs  records.rs  session_store.rs
crates/mez-agent/src/messaging/: dispatch.rs  error.rs  json.rs  mod.rs  service.rs  validation.rs
crates/mez-agent/src/model_profile/: mod.rs  tests.rs
crates/mez-agent/src/outcome/: mod.rs  presentation.rs
crates/mez-agent/src/permissions/: classification.rs  error.rs  identity.rs  mod.rs  paths.rs  policy.rs  rules.rs  tests.rs  types.rs
crates/mez-agent/src/scheduler/: error.rs  mod.rs  policy.rs  provider_retry.rs  queue.rs  tests.rs  types.rs
crates/mez-agent/src/semantic_patch_planning/: matcher.rs  mod.rs  snapshot.rs  transaction.rs
crates/mez-agent/src/semantic_patch_planning/tests/: execution.rs  matching.rs  mod.rs  (+1 more)
crates/mez-agent/src/shell/: bootstrap.rs  environment.rs  mod.rs  path_resolution.rs  transaction.rs
crates/mez-agent/src/shell_read_observation/: tests.rs
crates/mez-agent/src/subagent/: mod.rs  scope.rs  scope_tests.rs
crates/mez-agent/src/transcript/: checkpoint.rs  context_event.rs  error.rs  mod.rs  records.rs  summary.rs
crates/mez-agent/src/turn_ledger/: tests.rs
crates/mez-mux/: Cargo.toml
crates/mez-mux/src/: clipboard.rs  command.rs  copy.rs  error.rs  host_input.rs  input.rs  input_tests.rs  lib.rs  paste.rs  presentation.rs  presentation_tests.rs  record_browser.rs  render.rs  selector.rs
crates/mez-mux/src/attached_client/: input.rs  mod.rs  mouse.rs  output.rs
crates/mez-mux/src/command/: mod.rs  plans.rs  presentation.rs
crates/mez-mux/src/layout/: mod.rs  sizing.rs  tests.rs  tree.rs  types.rs  window.rs
crates/mez-mux/src/overlay/: input.rs  interaction.rs  mod.rs  state.rs
crates/mez-mux/src/presentation/: mod.rs  window_plan.rs
crates/mez-mux/src/process/: manager.rs  mod.rs  pane.rs  signals.rs  spawn.rs  tests.rs  types.rs
crates/mez-mux/src/readline/: buffer.rs  decoder.rs  mod.rs  prompt.rs
crates/mez-mux/src/render/: diff.rs  overlay.rs  prompt.rs  rich_text.rs  style.rs  wrap.rs
crates/mez-mux/src/session/: clients.rs  lifecycle.rs  mod.rs  snapshot.rs  targets.rs  tests.rs  types.rs  windows.rs
crates/mez-mux/src/theme/: mod.rs  tests.rs
crates/mezzanine/: Cargo.toml
crates/mezzanine/src/: error.rs  lib.rs  main.rs
crates/mezzanine/src/cli/: args.rs  auth.rs  config.rs  control_client.rs  env.rs  issue.rs  json.rs  mcp.rs  mod.rs  serve.rs  snapshot.rs
crates/mezzanine/src/config/: defaults.rs  extract.rs  mod.rs  mutation.rs  parsers.rs  paths.rs  schema.rs  validation.rs
crates/mezzanine/src/control/: authz.rs  capture.rs  config.rs  framing.rs  initialize.rs  mod.rs  registry.rs  types.rs
crates/mezzanine/src/host/: mod.rs  process.rs  shell.rs
crates/mezzanine/src/runtime/: agent_state.rs  auto_sizing.rs  config.rs  deferred.rs  hook_pipeline.rs  hook_support.rs  mod.rs  pane_io.rs  sockets.rs  status_pills.rs  transitions.rs
crates/mezzanine/src/security/: mod.rs
crates/mezzanine/src/storage/: mod.rs
crates/mezzanine/src/test_support/: agent.rs  async_runtime.rs  control.rs  mod.rs
crates/mezzanine/src/ui/: mod.rs
crates/mezzanine/tests/: foreground_cli.rs
(+1533 files in other folders)
