[package]
name = "mezzanine"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mez"
path = "src/main.rs"

[dependencies]
clap = { version = "4", default-features = false, features = ["std", "help", "usage", "derive"] }
futures-util = "0.3"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
keyring-core = "1.0"
portable-pty = "0.9"
rand = "0.9"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
rpassword = "7"
rustix = { version = "1.1", features = ["event", "fs", "net", "pipe", "process", "termios"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
sha2 = "0.10"
shlex = "1.3"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt", "rt-multi-thread", "signal", "sync", "test-util", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
toml = "0.8"
toml_edit = "0.22"
unicode-segmentation = "1.12"
unicode-width = "0.2"
urlencoding = "2"
wait-timeout = "0.2"
zeroize = "1.8"
pulldown-cmark = "0.13.3"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "parsing", "regex-fancy"] }
zstd = "0.13"

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
zbus-secret-service-keyring-store = { version = "1.0", features = ["rt-tokio-crypto-rust"] }
