[package]
name = "mez-agent"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
mez-core = { path = "../mez-core" }
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
shlex = "2"
urlencoding = "2"

[dev-dependencies]
wait-timeout = "0.2"
