[package]
name = "mez-mux"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
mez-core = { path = "../mez-core" }
mez-terminal = { path = "../mez-terminal" }
portable-pty = "0.9"
rustix = { version = "1.1", features = ["event", "fs", "process", "termios"] }
shlex = "2"
thiserror = "2"
unicode-width = "0.2"
