[package]
name = "mez-mux"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
mez-core = { path = "../mez-core" }
mez-terminal = { path = "../mez-terminal" }
portable-pty = "0.9"
pulldown-cmark = "0.13"
rustix = { version = "1.1", features = ["event", "fs", "process", "termios"] }
shlex = "2"
syntect = { version = "5.3", default-features = false, features = ["default-syntaxes", "default-themes", "parsing", "regex-fancy"] }
thiserror = "2"
unicode-width = "0.2"
unicode-segmentation = "1.12"
